# RAG

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  DEPLOYMENT.md  Dockerfile.prod  Makefile  PROJECT_STRUCTURE.md  README.md  WIP.md  analyze-frontend.js  browser-test.js  comprehensive-styling-test.js  debug-analysis.json  debug-design.js  deploy-fixed.bat  deploy.bat  deploy.sh  design-analysis.json  desktop-layout-analysis.json  desktop-layout-check.js  docker-cleanup.bat  docker-compose.prod.yml  docker-compose.yml  frontend-analysis.json  layout-analysis.json  layout-verification.js  package-lock.json  package.json  playwright.config.js  setup.md  styling-test-report.json  test-frontend.js  validate-production.bat  verify-design.js
.claude/: settings.local.json
backend/: .env.example  Dockerfile  Dockerfile.prod  Dockerfile.prod.simple  README.md  TESTING.md  main.py  pyproject.toml  pytest.ini  requirements-cpu.txt  requirements-minimal.txt  requirements.txt  run_tests.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/app/: __init__.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: auth.py  chats.py  documents.py  domains.py  external_models.py  health.py  rag.py  search.py  users.py
backend/app/core/: celery.py  config.py  database.py  events.py  logging.py  redis.py  security.py
backend/app/models/: __init__.py  base.py  chat.py  document.py  domain.py  external_model.py  vector_search_log.py
backend/app/schemas/: __init__.py  chat.py  document.py  domain.py  search.py
backend/app/services/: __init__.py  chat_service.py  document_service.py  domain_service.py  external_model_service.py  rag_service.py  search_service.py
backend/app/tasks/: __init__.py  chat_processing.py  document_processing.py  vector_embedding.py
backend/docker/: supervisord.conf
backend/tests/: __init__.py  conftest.py  conftest_service.py  mock_sqlalchemy.py  test_api_auth.py  test_api_chats.py  test_api_documents.py  test_api_domains.py  test_api_external_models.py  test_api_health.py  test_api_rag.py  test_api_search.py  test_basic.py  test_document_service.py  test_domain_service.py  test_domains.py  test_health.py  test_infrastructure.py  test_security.py  test_service_mocks.py  test_sync_services.py
database/: init.sql
docs/: DEVELOPMENT.md
frontend/: .env.local.example  README.md  TESTING.md  index.html  nginx.conf  package-lock.json  package.json  performance.config.js  playwright.config.ts  tailwind.config.js  tailwind.config.js.disabled  tsconfig.build.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts  {
frontend/playwright-report/: index.html
frontend/scripts/: performance-test.js  run-tests.bat  run-tests.sh
frontend/src/: App.tsx  index.css
frontend/src/__tests__/: security.test.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/hooks/: useKeyboardShortcuts.ts
frontend/src/lib/: api.ts  query-client.ts  router.tsx  routes.ts  utils.ts
frontend/src/pages/: ChatDetails.tsx  Chats.tsx  Dashboard.tsx  DocumentDetails.tsx  Documents.tsx  DomainDetails.tsx  Domains.tsx  EnhancedDashboard.tsx  ExternalModels.tsx  RAG.tsx  (+4 more)
frontend/test-results/: .last-run.json
nginx/: nginx.conf
nginx/ssl/: README.md
scripts/: setup-dev.bat  setup-dev.sh
tests/: frontend.spec.js
(+66 files in other folders)
